2016-05-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/CheckDump.pm: Use Xfer::Dest::Null for destination when
	  amanda don't know how to validate the dump

2016-05-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Tapelist.swg: Change RETENTION_NO string to
	  'retention-no'
	* server-src/amtape.pl (inventory): Print the retention even if it is
	  RETENTION_NO
	* installcheck/Amanda_Rest_Labels.pl,
	  installcheck/Amanda_Rest_Storages.pl: Fix for 'retention-no' string

2016-05-04  Dustin J. Mitchell <dustin@mozilla.com>
	* man/xml-source/amanda-auth.7.xml: Improve doc

2016-05-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/security-util.c: Break after the first callback

2016-05-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/tapefile.c: Use g_hash_table_destroy

2016-05-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Xfer.pl: Sort the crcs

2016-05-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/client_util.c (run_client_scripts): return the exit
	  status of the scripts
	* client-src/client_util.h (run_client_scripts): Change return type to
	  int
	* client-src/sendbackup.c: Do not run the application if a
	  PRE-DLE-BACKUP script failed
	* server-src/dumper.c: Fix hang

2016-05-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Xfer.pl: 45 checks require the server

2016-05-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* amandad-src/amandad.c, server-src/amcheck.c, server-src/driver.c,
	  server-src/dumper.c, server-src/planner.c,
	  common-src/amservice.c: Call glib_init()

2016-05-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/security-util.h (sec_stream): Add event_id
	* common-src/security-util.c: Use event_id from sec_stream

2016-05-02  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/xfer-dest-taper-cacher.c, xfer-src/dest-buffer.c,