@@ -1,4 +1,8 @@
 2016-05-05  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* perl/Amanda/Status.pm: Set status of failed dle to inew status
+	  TERMINATED_*
+
+2016-05-05  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* perl/Amanda/CheckDump.pm: Use Xfer::Dest::Null for destination when
 	  amanda don't know how to validate the dump
 
